    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/attach_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/check_gps"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/iface"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="26dp" />

        <RadioButton
            android:id="@+id/sandblind_radio"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:text="@string/iface_sandblind"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/blind_radio"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:text="@string/iface_blind"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/interface_comment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20dp" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/save"
            android:textSize="25dp" />

    </LinearLayout>
